# smartNode

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements-desktop.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  restart_server.ps1  run_server.bat  space_sim.spec  start.py
.github/: dependabot.yml  pull_request_template.md
backend/: __about__.py  __init__.py  api.py  app.py  auth.py  config.py  constellation.py  core.py  envelope.py  errors.py  logging_config.py  metrics.py  models.py  openapi.py  orbit.py  ratelimit.py  rbac.py  resources.py  scenario.py  schemas.py  snapshot.py  store.py  stream.py
data/: scenario.default.json
docker/: entrypoint.sh
frontend/: app.js  index.html  package.json  playwright.config.ts  styles.css  tsconfig.json  vite.config.js  vitest.config.ts
observability/: alert-rules.yml  otel-collector.yml  prometheus.yml
tests/: conftest.py  test_api.py  test_api_errors.py  test_api_integration.py  test_archive_cleanup.py  test_concurrency.py  test_content_value.py  test_core.py  test_core_correctness.py  test_engine_factory.py  test_event_log.py  test_j2_perturbation.py  test_m2_regression.py  test_models.py  test_openapi_contract.py  test_orbital.py  test_perf_benchmarks.py  test_persistence.py  test_rate_calc.py  test_regression_golden.py  test_scenario.py  test_scheduler_properties.py  test_smoke.py  test_snapshot.py  (+2 more)
(+77 files in other folders)
